--- a/index.html
+++ b/index.html
@@ -62,6 +62,22 @@
                         </div>
                     </div>
                 </div>
+                <div class="class">
+                    <h4 class="class-title">강의</h4>
+                    <h6 class="class-description"></h6>
+                    <div class="links-wrapper">
+                        <div class="link">
+                        </div>
+                    </div>
+                </div>
+                <div class="class">
+                    <h4 class="class-title">강의</h4>
+                    <h6 class="class-description"></h6>
+                    <div class="links-wrapper">
+                        <div class="link">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         </div>
